<?xml version="1.0"?>
<package format="2">
  <name>planning_server</name>
  <version>0.0.0</version>
  <description>Tesseract ROS Planning Server</description>
  <maintainer email="simon.robert@irt-jules-verne.fr">Simon ROBERT</maintainer>
  <license>Apache 2.0</license>
  <author>Simon ROBERT</author>

  <build_depend>ament_cmake</build_depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <depend>tesseract_monitoring</depend>
  <depend>tesseract_msgs</depend>
  <depend>tesseract_common</depend>
  <depend>tesseract_command_language</depend>
  <depend>tesseract_task_composer</depend>
  <depend>tesseract_motion_planners</depend>
  <depend>tesseract_rosutils</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
